# DuckBot

./: README.md  funcs.py  main.py  pyproject.toml  test.py  youtube.db
temp/music/: BTS - I NEED U (Official Instrumental) +Karaoke.webm
